--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,7 @@
 	<link rel="stylesheet" type="text/css" href="./static/css/custom.css">
 	<link rel="stylesheet" type="text/css" href="./static/css/responsive.css">
 	<link rel="stylesheet" type="text/css" href="./static/css/editor.css">
+	<link rel="stylesheet" type="text/css" href="./static/css/editor-test.css">
 	<link rel="stylesheet" type="text/css" href="./static/css/messages.css">
 	<link rel="stylesheet" type="text/css" href="./static/css/custom2.css">
 
