--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
 
 	<!-- custom css -->
 	<link rel="stylesheet" type="text/css" href="./static/css/checkbox.css">
+	<!-- <link rel="stylesheet" type="text/css" href="./static/css/bootstrap-select.css"> -->
 	<link rel="stylesheet" type="text/css" href="./static/css/sb-admin.css">
 	<link rel="stylesheet" type="text/css" href="./static/css/sidebar.css">
 	<link rel="stylesheet" type="text/css" href="./static/css/custom.css">
@@ -21,7 +22,7 @@
 	<link rel="stylesheet" type="text/css" href="./static/css/editor.css">
 	<link rel="stylesheet" type="text/css" href="./static/css/editor-test.css">
 	<link rel="stylesheet" type="text/css" href="./static/css/messages.css">
-	<link rel="stylesheet" type="text/css" href="./static/css/custom2.css">
+
 
 		<!-- froala angular testcss -->
 	<link rel="stylesheet" type="text/css" href="./bower_components/froala-wysiwyg-editor/css/froala_editor.min.css">
@@ -51,8 +52,9 @@
 <script type="text/javascript" src="app.js"></script>
 
 <!-- custom css -->
-<script type="text/javascript" src="/static/js/sidebar.js"></script>
-<script type="text/javascript" src="/static/js/script.js"></script>
+<script type="text/javascript" src="./static/js/bootstrap-select.min.js"></script>
+<script type="text/javascript" src="./static/js/sidebar.js"></script>
+<script type="text/javascript" src="./static/js/script.js"></script>
 
 
 
