--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
 
 	<!-- custom css -->
 	<link rel="stylesheet" type="text/css" href="./static/css/checkbox.css">
-	<!-- <link rel="stylesheet" type="text/css" href="./static/css/bootstrap-select.css"> -->
+	<link rel="stylesheet" type="text/css" href="./static/css/bootstrap-select.css">
 	<link rel="stylesheet" type="text/css" href="./static/css/sb-admin.css">
 	<link rel="stylesheet" type="text/css" href="./static/css/sidebar.css">
 	<link rel="stylesheet" type="text/css" href="./static/css/custom.css">
