--- a/client/members/members.html
+++ b/client/members/members.html
@@ -1,4 +1,4 @@
-<div id="wrapper">
+<div id="wrapper" class="editor_wrapper">
   <!-- Navigation -->
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
