--- a/client/guideEditor/guideEditor.html
+++ b/client/guideEditor/guideEditor.html
@@ -5,8 +5,6 @@
     <div id="sidebar-wrapper">
 
       <ul class="sidebar-nav nav-pills nav-stacked side-nav" id="menu">
-
-
         <li>
           <h3 class="sidebar-title sidebar-back"><a href="workspaces-member.html"><span aria-hidden="true" class="glyphicon glyphicon-share-alt"></span></a><span>back to networking</span></h3>
         </li>
@@ -27,38 +25,38 @@
 
         <div id="editor-items">
 
-         
+
 
           <li>
             <a href="javascript:void(0);">
-            <span class="fa-stack fa-lg pull-left"><i class="fa fa fa-reorder fa-stack-1x "></i></span> 
+            <span class="fa-stack fa-lg pull-left"><i class="fa fa fa-reorder fa-stack-1x "></i></span>
             Billing & Invoicing
-            <span class="fa-stack fa-lg pull-right fa-common sign"><i class="fa fa-chevron-circle-right fa-stack-1x "></i></span>       
+            <span class="fa-stack fa-lg pull-right fa-common sign"><i class="fa fa-chevron-circle-right fa-stack-1x "></i></span>
             <span class="fa-stack fa-lg pull-right fa-common"><i class="fa fa-plus-circle fa-stack-1x "></i></span>
             </a>
 
             <div class="sub_menu">
               <a href="javascript:void(0);">
-              <span class="fa-stack fa-lg pull-left"><i class="fa fa fa-reorder fa-stack-1x "></i></span> 
+              <span class="fa-stack fa-lg pull-left"><i class="fa fa fa-reorder fa-stack-1x "></i></span>
               Account & Contacts
-              <span class="fa-stack fa-lg pull-right fa-common sign"><i class="fa fa-chevron-circle-right fa-stack-1x "></i></span>       
+              <span class="fa-stack fa-lg pull-right fa-common sign"><i class="fa fa-chevron-circle-right fa-stack-1x "></i></span>
               <span class="fa-stack fa-lg pull-right fa-common"><i class="fa fa-plus-circle fa-stack-1x "></i></span>
-              </a>                    
+              </a>
               <div class="sub_menu sub_menu2">
                 <a href="javascript:void(0);">
-                <span class="fa-stack fa-lg pull-left"><i class="fa fa fa-reorder fa-stack-1x "></i></span> 
+                <span class="fa-stack fa-lg pull-left"><i class="fa fa fa-reorder fa-stack-1x "></i></span>
                 Paperless Billing
                 <span class="fa-stack fa-lg pull-right fa-common sign"><i class="fa fa-chevron-circle-right fa-stack-1x "></i></span>
                 <span class="fa-stack fa-lg pull-right fa-common"><i class="fa fa-plus-circle fa-stack-1x "></i></span>
-                </a>                                          
+                </a>
               </div>
             </div>
           </li>
           <li>
           	<a href="javascript:void(0);">
-          	<span class="fa-stack fa-lg pull-left"><i class="fa fa fa-reorder fa-stack-1x "></i></span> 
+          	<span class="fa-stack fa-lg pull-left"><i class="fa fa fa-reorder fa-stack-1x "></i></span>
           	Billing & Invoicing
-          	<span class="fa-stack fa-lg pull-right fa-common sign"><i class="fa fa-chevron-circle-right fa-stack-1x "></i></span>       
+          	<span class="fa-stack fa-lg pull-right fa-common sign"><i class="fa fa-chevron-circle-right fa-stack-1x "></i></span>
           	<span class="fa-stack fa-lg pull-right fa-common"><i class="fa fa-plus-circle fa-stack-1x "></i></span>
           	</a>
           </li>
@@ -82,22 +80,26 @@
                 	<div class="col-md-10 headers">
                   <h2>Google Glass Monitoring with Treasure Data</h2>
                   <p class="editor_buttons">
-                    <button role="button" href="javascript:void(0)" class="btn btn-default active" ng-click="editGuide(edit)">Save</button>                   
+                    <button role="button" href="javascript:void(0)" class="btn btn-default active" ng-click="editGuide(edit)">Save</button>
                     <button role="button" href="javascript:void(0)" class="btn btn-default">Close</button>
                   </p>
                 </div>
                 <div class="col-md-2">
                   <div class="editor_dropdowns">
-                    <select class="selectpicker">
-                      <option selected="selected">V. 1.0</option>
-                      <option>V. 2.0</option>
-                      <option>V. 3.0</option>
+                    <div class="form-group">
+                     <select class="form-control" id="lists">
+                       <option>V. 1.0</option>
+                       <option>V. 2.0</option>
+                       <option>V. 3.0</option>
+                     </select>
+                   </div>
+                   <div class="form-group">
+                    <select class="form-control active" id="lists2">
+                      <option>DRAFT</option>
+                      <option>PUBLISHED</option>
+                      <option>ARCHIVED</option>
                     </select>
-                    <select class="selectpicker active">
-                      <option selected="selected">Published</option>
-                      <option>Draft</option>
-                      <option>Archived</option>
-                    </select>
+                  </div>
                   </div>
                 </div>
               </div>
@@ -127,9 +129,3 @@
   <!-- /#page-wrapper -->
 </div>
 <!-- /#wrapper -->
-
-
-
-
-
-
